--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-05-23 15:29:14
- * @LastEditTime: 2020-05-24 09:56:57
+ * @LastEditTime: 2020-05-24 16:12:53
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Test\index.html
@@ -16,46 +16,19 @@
   <body>
     <script src="./lib/Promise.js"></script>
     <script>
-      const p = new Promise((resolve, reject) => {
-        setTimeout(() => {
-          // resolve(1);
-        reject(2)
-        }, 100);
-      }).then(
-        (value) => {
-          console.log("onResolved1()", value);
+      const p1 = Promise.resolve(1);
+      const p2 = Promise.resolve(Promise.resolve(2));
+      const p3 = Promise.resolve(Promise.reject(3));
+      const pAll = Promise.all([p1, p2]);
+
+      pAll.then(
+        (values) => {
+          console.log("pAll成功", values);
         },
         (reason) => {
-          console.log("onRejected1()", reason);
-          throw 3
+          console.log("pAll失败", reason);
         }
-      ).then(
-        (value) => {
-          console.log("onResolved2()", value);
-        },
-        (reason) => {
-          console.log("onRejected2()", reason);
-          return new Promise((resolve, reject) => {
-            reject(4)
-          })
-        }
-      ).catch(
-        reason => {
-          console.log("onRejected3()", reason);
-          // 中断promise链
-          return new Promise(() => {})
-        }
-      ).then(
-        (value) => {
-          console.log("onResolved4()", value);
-        },
-        (reason) => {
-          console.log("onRejected4()", reason);
-          return new Promise((resolve, reject) => {
-            reject(4)
-          })
-        }
-      )
+      );
     </script>
   </body>
 </html>
